added files which were provied by prof

--- a/RobotIO/RobotIO.csproj
+++ b/RobotIO/RobotIO.csproj
@@ -41,6 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GPIO.cs" />
+    <Compile Include="GPIOPort.cs" />
+    <Compile Include="IIOPortEx.cs" />
+    <Compile Include="IOPortEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkTargetsVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
