--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ RobotView/bin
 RobotView/obj
 TestConsole/bin
 TestConsole/obj
+RobotIO/RobotIO.csproj.user
+RobotView/RobotView.csproj.user
+TestConsole/TestConsole.csproj.user
