--- a/RobotCtrl/RobotCtrl.csproj
+++ b/RobotCtrl/RobotCtrl.csproj
@@ -42,7 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
+    <Compile Include="Input\DigitalIn.cs" />
+    <Compile Include="Input\Switch.cs" />
+    <Compile Include="Input\SwitchEventArgs.cs" />
+    <Compile Include="IOPort.cs" />
+    <Compile Include="Output\DigitalOut.cs" />
+    <Compile Include="Output\Led.cs" />
+    <Compile Include="Output\LedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RobotConsole.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkTargetsVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
