--- a/RobotView/RobotView.csproj
+++ b/RobotView/RobotView.csproj
@@ -36,17 +36,36 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleView.cs">
+      <SubType>usercontrol</SubType>
+    </Compile>
+    <Compile Include="ConsoleView.designer.cs">
+      <DependentUpon>ConsoleView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LedView.cs">
+      <SubType>usercontrol</SubType>
+    </Compile>
+    <Compile Include="LedView.designer.cs">
+      <DependentUpon>LedView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
+    <Compile Include="SwitchView.cs">
+      <SubType>usercontrol</SubType>
+    </Compile>
+    <Compile Include="SwitchView.designer.cs">
+      <DependentUpon>SwitchView.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -56,6 +75,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="LedView.resx">
+      <DependentUpon>LedView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
