--- a/TestConsole/TestConsole.csproj
+++ b/TestConsole/TestConsole.csproj
@@ -71,6 +71,10 @@
       <Project>{43DB3252-652D-4FEC-A5B4-5061937091E6}</Project>
       <Name>RobotCtrl</Name>
     </ProjectReference>
+    <ProjectReference Include="..\RobotIO\RobotIO.csproj">
+      <Project>{E7BE3E52-1C22-41C5-9976-EBDD4ED19349}</Project>
+      <Name>RobotIO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RobotView\RobotView.csproj">
       <Project>{6A84FA6B-692A-4769-8298-811DDD654F3C}</Project>
       <Name>RobotView</Name>
