--- a/TestMotor/TestMotor.csproj
+++ b/TestMotor/TestMotor.csproj
@@ -4,18 +4,19 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6A84FA6B-692A-4769-8298-811DDD654F3C}</ProjectGuid>
+    <ProjectGuid>{3A609D87-641E-4D66-A552-569056AFE8DC}</ProjectGuid>
     <ProjectTypeGuids>{6AFDAB0D-95EF-424D-8A49-099ECD40B0FF};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
-    <OutputType>Library</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RobotView</RootNamespace>
-    <AssemblyName>RobotView</AssemblyName>
+    <RootNamespace>TestMotor</RootNamespace>
+    <AssemblyName>TestMotor</AssemblyName>
     <TargetFrameworkIdentifier>WindowsEmbeddedCompact</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.9</TargetFrameworkVersion>
     <TargetFrameworkTargetsVersion>v8.0</TargetFrameworkTargetsVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,6 +26,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -35,49 +37,33 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleView.cs">
-      <SubType>usercontrol</SubType>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ConsoleView.designer.cs">
-      <DependentUpon>ConsoleView.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="DriveCtrlView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="DriveCtrlView.designer.cs">
-      <DependentUpon>DriveCtrlView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="LedView.cs">
-      <SubType>usercontrol</SubType>
-    </Compile>
-    <Compile Include="LedView.designer.cs">
-      <DependentUpon>LedView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MotorCtrlView.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="MotorCtrlView.designer.cs">
-      <DependentUpon>MotorCtrlView.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\Resource.Designer.cs">
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resource.resx</DependentUpon>
-    </Compile>
-    <Compile Include="SwitchView.cs">
-      <SubType>usercontrol</SubType>
-    </Compile>
-    <Compile Include="SwitchView.designer.cs">
-      <DependentUpon>SwitchView.cs</DependentUpon>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -85,40 +71,14 @@
       <Project>{43DB3252-652D-4FEC-A5B4-5061937091E6}</Project>
       <Name>RobotCtrl</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="ConsoleView.resx">
-      <DependentUpon>ConsoleView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DriveCtrlView.resx">
-      <DependentUpon>DriveCtrlView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="LedView.resx">
-      <DependentUpon>LedView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MotorCtrlView.resx">
-      <DependentUpon>MotorCtrlView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Resources\Resource.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SwitchView.resx">
-      <DependentUpon>SwitchView.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Images\LedOff.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Images\LedOn.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Images\SwitchOff.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Images\SwitchOn.bmp" />
+    <ProjectReference Include="..\RobotIO\RobotIO.csproj">
+      <Project>{E7BE3E52-1C22-41C5-9976-EBDD4ED19349}</Project>
+      <Name>RobotIO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RobotView\RobotView.csproj">
+      <Project>{6A84FA6B-692A-4769-8298-811DDD654F3C}</Project>
+      <Name>RobotView</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkTargetsVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
