--- a/RobotCtrl/RobotCtrl.csproj
+++ b/RobotCtrl/RobotCtrl.csproj
@@ -59,7 +59,10 @@
     <Compile Include="Output\DigitalOut.cs" />
     <Compile Include="Output\Led.cs" />
     <Compile Include="Output\LedEventArgs.cs" />
+    <Compile Include="PositionInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Radar\Radar.cs" />
+    <Compile Include="Robot.cs" />
     <Compile Include="RobotConsole.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkTargetsVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
