--- a/RobotView/RobotView.csproj
+++ b/RobotView/RobotView.csproj
@@ -79,7 +79,9 @@
     <Compile Include="MotorCtrlView.designer.cs">
       <DependentUpon>MotorCtrlView.cs</DependentUpon>
     </Compile>
-    <Compile Include="NumberKeyboard.cs" />
+    <Compile Include="NumberKeyboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="NumberKeyboard.Designer.cs">
       <DependentUpon>NumberKeyboard.cs</DependentUpon>
     </Compile>
@@ -88,6 +90,12 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
+    <Compile Include="RunLineView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="RunLineView.designer.cs">
+      <DependentUpon>RunLineView.cs</DependentUpon>
     </Compile>
     <Compile Include="SwitchView.cs">
       <SubType>usercontrol</SubType>
@@ -128,6 +136,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RunLineView.resx">
+      <DependentUpon>RunLineView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SwitchView.resx">
       <DependentUpon>SwitchView.cs</DependentUpon>
