--- a/Testat/Testat.csproj
+++ b/Testat/Testat.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlinkLEDs.cs" />
     <Compile Include="DetectBox.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
