Added HttpServer (not yet implemented) and HttpPageCreator.

--- a/Testat2/Testat2.csproj
+++ b/Testat2/Testat2.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HttpPageCreator.cs" />
+    <Compile Include="HttpServer.cs" />
     <Compile Include="TrackFactory.cs" />
     <Compile Include="TrackRunner.cs" />
     <Compile Include="TrackCreator.cs" />
