added ObstacleDetector. Track now periodically calls ObstacleDetector and if there is something it ends the execution of Tracks.

--- a/Testat2/Testat2.csproj
+++ b/Testat2/Testat2.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="HttpPageCreator.cs" />
     <Compile Include="HttpServer.cs" />
+    <Compile Include="ObstacleDetector.cs" />
     <Compile Include="TrackFactory.cs" />
     <Compile Include="TrackRunner.cs" />
     <Compile Include="TrackCreator.cs" />
