--- a/Testat2/Testat2.csproj
+++ b/Testat2/Testat2.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HttpPageCreator.cs" />
+    <Compile Include="HttpServer\HttpPageCreator.cs" />
     <Compile Include="HttpServer\HttpHandler.cs" />
     <Compile Include="HttpServer\SimpleHttpServer.cs" />
     <Compile Include="ObstacleDetector.cs" />
@@ -53,8 +53,8 @@
     <Compile Include="TrackRunner.cs" />
     <Compile Include="TrackCreator.cs" />
     <Compile Include="TrackExecutor.cs" />
-    <Compile Include="TrackDataStorage.cs" />
-    <Compile Include="TrackStorage.cs" />
+    <Compile Include="Storage\TrackDataStorage.cs" />
+    <Compile Include="Storage\TrackStorage.cs" />
     <Compile Include="Tracks\ArcLeft.cs" />
     <Compile Include="CommandReceiverHandler.cs" />
     <Compile Include="Tracks\ArcRight.cs" />
